FE: Chat Completed

--- a/project/frontend/public/index.html
+++ b/project/frontend/public/index.html
@@ -25,6 +25,17 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/theme.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/grid.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/box.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/colors.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/misc.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/card.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/form.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/alerts.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/glass.css">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
